--- a/.gitignore
+++ b/.gitignore
@@ -162,7 +162,7 @@ UpgradeLog*.XML
 UpgradeLog*.htm
 
 # SQL Server files
-App_Data/*.mdf
+####################### me changed App_Data/*.mdf
 App_Data/*.ldf
 
 #############
